--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.gitignore.io/api/linux,macos,windows,android,androidstudio
 # Edit at https://www.gitignore.io/?templates=linux,macos,windows,android,androidstudio
 
+app/src/main/res/values/secrets.xml
+
 ### Android ###
 # Built application files
 *.apk
