--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
         androidxCardViewVersion = '1.0.0'
         androidxConstraintLayoutVersion = '1.1.3'
         androidxRecyclerViewVersion = '1.1.0'
-        androidxLifecycleVersion = '2.1.0'
+        androidxLifecycleVersion = '2.2.0-rc03'
 
         roomVersion = '2.2.2'
 
