--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
@@ -63,6 +64,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$roomVersion"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$roomVersion"
 
     // Networking: OkHttp
@@ -84,6 +86,9 @@ dependencies {
 
     // Dates & timestamps
     implementation "com.jakewharton.threetenabp:threetenabp:$threeTenVersion"
+
+    // View Pager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     // Testing
     testImplementation 'junit:junit:4.12'
