--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,9 @@ dependencies {
     // View Pager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
+    // Material
+    implementation "com.google.android.material:material:1.2.0-alpha03"
+
     // Testing
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
