--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     kapt "androidx.room:room-compiler:$roomVersion"
 
     // Networking: OkHttp
@@ -92,6 +93,9 @@ dependencies {
 
     // Material
     implementation "com.google.android.material:material:1.2.0-alpha03"
+
+    // Third party spinner
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
 
     // Testing
     testImplementation 'junit:junit:4.12'
